--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
+    "mongoose": "^6.1.7",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-toastify": "^8.1.0",
     "react-tsparticles": "^1.39.0"
   },
   "devDependencies": {
